--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   ],
   "license": "MIT",
   "main": "src/diffbot.js",
-  "homepage": "https://github.com/therealpadster/diffbot-api-node"
+  "scripts": {
+    "test": "mocha"
+  },
+  "homepage": "https://github.com/therealpadster/diffbot-api-node",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
+    "mocha": "^8.1.2"
+  }
 }
