--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "Promise-based Node.js library for Diffbot APIs",
   "tags": [
     "diffbot",
-    "api"
+    "api",
+    "node"
   ],
   "version": "0.0.11",
   "repository": {
@@ -14,7 +15,7 @@
     "web": "https://github.com/therealpadster/node-diffbot/issues"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0"
+    "axios": "^0.20.0"
   },
   "keywords": [
     "diffbot",
