--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "main": "src/diffbot.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/**/*.test.js"
   },
   "homepage": "https://github.com/therealpadster/diffbot-api-node",
   "devDependencies": {
