➕ Add CodeCov for code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
   - node
-# safelist
 branches:
   only:
   - master
   - request-generation
+script:
+  - npm run test
+  - npm run report-coverage
