--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/therealpadster/diffbot-api-node",
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "codecov": "^3.8.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
