--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web": "https://github.com/therealpadster/node-diffbot/issues"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0"
+    "axios": "^0.20.0"
   },
   "keywords": [
     "diffbot",
