--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "homepage": "https://github.com/therealpadster/diffbot-api-node",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "chai": "^6.2.1",
     "chai-as-promised": "^8.0.2",
     "codecov": "^3.8.3",
     "eslint": "^9.39.2",
+    "globals": "^16.5.0",
     "mocha": "^11.7.5",
     "nyc": "^17.1.0",
     "typescript": "^5.9.3"
