--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     name: test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Project
+      - name: Check out repository
         uses: actions/checkout@v3
       - name: Use Node.js 24
         uses: actions/setup-node@v3
