--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,12 +15,12 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Project
+      - name: Check out repository
         uses: actions/checkout@v3
-      - name: Use Node.js 16
+      - name: Use Node.js 24
         uses: actions/setup-node@v3.1.0
         with:
-          node-version: 16
+          node-version: 24
       - name: Install dependencies
         run: npm i
       - name: Lint checks
