--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ jobs:
     name: test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Project
+      - name: Check out repository
         uses: actions/checkout@v3
-      - name: Use Node.js 16
+      - name: Use Node.js 24
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 24
       - name: Install dependencies
         run: npm ci
       - name: Run tests
