--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web": "https://github.com/therealpadster/diffbot-api-node/issues"
   },
   "dependencies": {
-    "axios": "^1.11.0"
+    "axios": "^1.13.2"
   },
   "keywords": [
     "diffbot",
@@ -33,12 +33,15 @@
   },
   "homepage": "https://github.com/therealpadster/diffbot-api-node",
   "devDependencies": {
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.1",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "chai": "^6.2.1",
+    "chai-as-promised": "^8.0.2",
     "codecov": "^3.8.3",
-    "eslint": "^8.56.0",
-    "mocha": "^11.0.1",
-    "nyc": "^17.0.0",
-    "typescript": "^5.8.3"
+    "eslint": "^9.39.2",
+    "globals": "^16.5.0",
+    "mocha": "^11.7.5",
+    "nyc": "^17.1.0",
+    "typescript": "^5.9.3"
   }
 }
